<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="20dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="127dp"
        android:layout_height="170dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="1.0"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/anime_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        card_view:layout_constraintStart_toStartOf="@id/tv_item_name"
        card_view:layout_constraintTop_toBottomOf="@id/tv_item_name" />

    <TextView
        android:id="@+id/rilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rilis"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        card_view:layout_constraintStart_toStartOf="@id/genre"
        card_view:layout_constraintTop_toBottomOf="@id/tv_genre" />

    <TextView
        android:id="@+id/sutradara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sutradara"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        card_view:layout_constraintStart_toStartOf="@id/rilis"
        card_view:layout_constraintTop_toBottomOf="@id/tv_rilis" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="16sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="@id/guideline"
        card_view:layout_constraintTop_toBottomOf="@id/tv_item_name" />

    <TextView
        android:id="@+id/tv_rilis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rilis"
        android:textColor="@color/white"
        android:textSize="16sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="@id/guideline"
        card_view:layout_constraintTop_toBottomOf="@id/tv_genre" />

    <TextView
        android:id="@+id/tv_sutradara"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sutradara"
        android:textColor="@color/white"
        android:textSize="16sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="@id/guideline"
        card_view:layout_constraintTop_toBottomOf="@id/tv_rilis" />

    <TextView
        android:id="@+id/sinopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sinopsis"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        card_view:layout_constraintStart_toStartOf="@id/img_item_photo"
        card_view:layout_constraintTop_toBottomOf="@id/tv_sutradara" />

    <TextView
        android:id="@+id/tv_sinopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sinopsis"
        android:textColor="@color/white"
        android:textSize="18sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="@id/sinopsis"
        card_view:layout_constraintTop_toBottomOf="@id/sinopsis" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_begin="243dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


